2014-08-14  Sancho Lerena <slerena@artica.es>

	* FreeBSD/pandora_server.conf.new,
	conf/pandora_server.conf.new,
	conf/pandora_server.conf.windows: Modified default configuration
	to avoid put all agents in the group id #2. 

2014-08-14  Koichiro Kikuchi <koichiro@rworks.jp>

	* pandora_server_installer: Fixed wrong chmod target.

2014-08-14 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/PluginServer.pm: Added new alert macros
	_plugin_param1_ (,_plugin_param2_ and so on) to access to
	each of plugin parameters. Also added _plugin_param1_desc_
	to access to each description of plugin parameters.

2014-08-14  Koichiro Kikuchi <koichiro@rworks.jp>

	* FreeBSD/tentacle_server: Set rcvar statically.

2014-08-13  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.redhat.spec: Fixed some typos (packages were not
	  being built).

2014-08-12  Koichiro Kikuchi <koichiro@rworks.jp>

	* bin/pandora_server: Fixed issue that pandora_server failed to
	 shut down properly on non-Linux systems.

	Merged r10335 from branch 5.0.

2014-08-12  Koichiro Kikuchi <koichiro@rworks.jp>

	* pandora_server_installer: Refactord implementation, added
	"fakeroot" installation support, small bug fixes and improvements:
	fixed processing arguments, replace "test -e" with "test -f" for portability
	(solaris' /bin/sh doesn't support "test -e").

	* Makefile.PL: Install bin/tentacle_server if WITHOUT_TENTACLE=0 so that
	MakeMaker can fix perl path in the shebang line.

	* pandora_server.redhat.spec: Added missing dependency.

	* FreeBSD/pandora_server.conf -> FreeBSD/pandora_server.conf.new: Renamed
	* NetBSD/pandora_server.conf  -> NetBSD/pandora_server.conf.new: Rename

	* FreeBSD/tentacle_server: Small bug fix and improvements. Fixed
	"tentacle_server_flags" and modified code to use proper variables and
	to get pid more strictly.

	* FreeBSD/pandora_server: Added support to start multiple pandora_server
	instances.

2014-08-12  Junichi Satoh <junichi@rworks.jp>
